--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,4 @@
 name: Deploy to GitHub-Pages
-
 on:
   push:
     branches:
@@ -22,7 +21,7 @@ jobs:
           persist-credentials: false
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Build project
         run: npm run build
